--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <div class="container">
         <div class="weather-card">
             <h1 style="color: rgb(31, 71, 146);">Weather App</h1>
-            <input type="text" id="city-input" placeholder="Enter city name">
-            <button id="city-input-btn" onclick="weatherFn($('#city-input').val())">Get Weather</button>
-            <div id="weather-info" class="animate__animated animate__fadeIn">
+            <input type="text" id="input" placeholder="Enter city name">
+            <button id="input-btn" onclick="weatherFn($('#input').val())">Get Weather</button>
+            <div id="weather-info">
                 <h2 id="city-name"></h2>
                 <p id="date"></p>
                 <p id="temperature"></p>
